# velib-predictor

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
config/: features.yaml
scripts/: README.md  add_weather.sh  collect_data.sh  docker-entrypoint.sh  evaluate_model.sh  init_db.sql  initial_data_load.sh  main.sh  run_evaluation_demo.py  setup_cron.sh  setup_database.sh  verify_data.sh
src/data/: collector.py  database.py  weather_collector.py
src/data/features/: __init__.py  lagged.py  pipeline.py  spatial.py  temporal.py  weather.py
src/evaluation/: evaluator.py  visualizer.py
src/models/: base.py
src/models/baseline/: linear.py  persistence.py  tree_models.py
src/models/lstm/: model.py
tests/: test_basic.py  test_evaluator.py  test_lagged_features.py  test_linear_models.py  test_lstm_model.py  test_persistence.py  test_pipeline.py  test_spatial_features.py  test_temporal_features.py  test_tree_models.py  test_weather_features.py
