[project]
name = "velib-predictor"
version = "0.1.0"
description = "Time series forecasting for Velib bike availability"
authors = []
requires-python = ">=3.14"
license = {text = "MIT"}

dependencies = [
    # Core
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "polars>=0.20.0",
    
    # Database
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
    
    # ML Frameworks
    # "torch>=2.0.0",
    # "torch-geometric>=2.3.0",
    # "scikit-learn>=1.3.0",
    # "xgboost>=1.7.0",
    
    # ML Tools
    "mlflow>=2.5.0",
    # "pytorch-lightning>=2.0.0",
    
    # API
    "requests>=2.31.0",
    "httpx>=0.24.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "loguru>=0.7.0",
    
    # Spatial
    # "geopy>=2.3.0",
    # "scipy>=1.11.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    
    # Code Quality
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    
    # Notebooks
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# Black configuration
[tool.black]
line-length = 100
target-version = ['py310']